[package]
name = "rpgp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
anyhow = "1.0"
console_error_panic_hook = "0.1"
lazy_static = "1.4"
hex = "0.4"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
smallvec = "1.11"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
pgp = { version = "0.16.0", default-features = false, features = ["pqc", "wasm"] }

[profile.release]
opt-level = "s"
lto = true
